Squashed commit of the following:
commit bd1c567d74c9ae99e9e34857f5821a413be5dc35
Author: Taylor Holberton <taylorcholberton@gmail.com>
Date:   Sat Apr 11 17:47:07 2020 -0400

    Added testing for 'double'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,27 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(lbvh CXX)
+project(lbvh)
+
+find_package(Threads REQUIRED)
+
+set(model_path "${CMAKE_CURRENT_SOURCE_DIR}/models/sponza.obj")
+
+if(MSVC)
+  list(APPEND cxxflags "/DMODEL_PATH=\"${model_path}\"")
+else(MSVC)
+  list(APPEND cxxflags "-DMODEL_PATH=\"${model_path}\"")
+endif(MSVC)
 
 add_library(lbvh INTERFACE)
 
 target_include_directories(lbvh INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_executable(lbvh_test lbvh_test.cpp lbvh.h models/tiny_obj_loader.cc)
+add_executable(lbvh_test
+  lbvh_test.cpp
+  lbvh.h
+  third-party/stb_image_write.c
+  third-party/tiny_obj_loader.cc)
 
-target_link_libraries(lbvh_test PRIVATE lbvh)
+target_compile_options(lbvh_test PRIVATE ${cxxflags})
+
+target_link_libraries(lbvh_test PRIVATE lbvh Threads::Threads)
