Created benchmarking program, for comparisons to other libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,20 +20,75 @@ add_library(lbvh INTERFACE)
 
 target_include_directories(lbvh INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_executable(lbvh_test
-  lbvh_test.cpp
-  lbvh.h
-  third-party/stb_image_write.c
-  third-party/tiny_obj_loader.h
-  third-party/tiny_obj_loader.cc)
+################
+# Test Program #
+################
 
-target_compile_options(lbvh_test PRIVATE ${cxxflags})
+if(LBVH_TESTS)
 
-target_link_libraries(lbvh_test PRIVATE lbvh Threads::Threads)
+  add_executable(lbvh_test
+    lbvh_test.cpp
+    lbvh.h
+    third-party/stb_image_write.h
+    third-party/stb_image_write.c
+    third-party/tiny_obj_loader.h
+    third-party/tiny_obj_loader.cc)
 
-if(NOT MSVC)
-  target_compile_options(lbvh_test PRIVATE -Wall -Wextra -Werror -Wfatal-errors)
-endif(NOT MSVC)
+  target_compile_options(lbvh_test PRIVATE ${cxxflags})
+
+  target_link_libraries(lbvh_test PRIVATE lbvh Threads::Threads)
+
+  if(NOT MSVC)
+    target_compile_options(lbvh_test PRIVATE -Wall -Wextra -Werror -Wfatal-errors)
+  endif(NOT MSVC)
+
+  enable_testing()
+
+endif(LBVH_TESTS)
+
+if(LBVH_BENCH)
+
+  cmake_minimum_required(VERSION 3.14.7)
+
+  include(FetchContent)
+
+  FetchContent_Declare(bvh URL "https://github.com/madmann91/bvh/archive/master.zip")
+
+  FetchContent_MakeAvailable(bvh)
+
+  find_package(OpenMP REQUIRED COMPONENTS CXX)
+
+  add_executable(lbvh_bench
+    bench/main.cpp
+    bench/library.h
+    bench/library.cpp
+    bench/this_library.h
+    bench/this_library.cpp
+    bench/bvh_library.h
+    bench/bvh_library.cpp
+    third-party/stb_image_write.h
+    third-party/stb_image_write.c
+    third-party/tiny_obj_loader.h
+    third-party/tiny_obj_loader.cc)
+
+  if(NOT MSVC)
+    target_compile_options(lbvh_bench PRIVATE -Wall -Wextra -Werror -Wfatal-errors -Wno-unknown-pragmas)
+  endif(NOT MSVC)
+
+  target_compile_features(lbvh_bench PRIVATE cxx_std_17)
+
+  target_link_libraries(lbvh_bench
+    PRIVATE
+      lbvh
+      bvh
+      Threads::Threads
+      OpenMP::OpenMP_CXX)
+
+endif(LBVH_BENCH)
+
+###################
+# Minimal Example #
+###################
 
 if(LBVH_EXAMPLES)
 
@@ -47,5 +102,3 @@ if(LBVH_EXAMPLES)
       OUTPUT_NAME minimal_example)
 
 endif(LBVH_EXAMPLES)
-
-enable_testing()
